packages/parser/test/tokenizer/E0009-binary-eof.txt
0b
===== err =====
/test/tokenizer/E0009-binary-eof.txt:1:1: SyntaxError: E0009 - Invalid binary integer literal
1 | 0b
  | ^
